Added missing GitHub Actions env vars to docs

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,6 @@ REVALIDATION_SECRET=CHANGE_ME_REVALIDATION_SECRET
 # Set these in GitHub repository secrets for the production release workflow.
 # SUPABASE_DB_URL=postgresql://postgres:<password>@db.<project-ref>.supabase.co:5432/postgres?sslmode=require
 # VERCEL_DEPLOY_HOOK_URL=https://api.vercel.com/v1/integrations/deploy/<deployment-hook-id>
+# NEXT_PUBLIC_SUPABASE_URL=https://<project-ref>.supabase.co
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=<anon-key>
+# NEXT_PUBLIC_SITE_URL=https://your-production-domain.com
