Removed browser login form

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ SUPABASE_SERVICE_ROLE_KEY=your-dev-service-role-key
 ADMIN_EMAIL=CHANGE_ME_ADMIN_EMAIL
 ADMIN_PASSWORD=CHANGE_ME_ADMIN_PASSWORD
 ADMIN_FULL_NAME=CHANGE_ME_ADMIN_FULL_NAME
+# Secret terminal command for admin login (single token, no spaces).
+# Escape dollar signs as `\$` if they are part of the command value.
+# Never commit your real value.
+ADMIN_LOGIN_COMMAND=CHANGE_ME_ADMIN_LOGIN_COMMAND
 
 # Site
 NEXT_PUBLIC_SITE_URL=http://localhost:3000
@@ -24,3 +28,4 @@ REVALIDATION_SECRET=CHANGE_ME_REVALIDATION_SECRET
 # NEXT_PUBLIC_SUPABASE_URL=https://<project-ref>.supabase.co
 # NEXT_PUBLIC_SUPABASE_ANON_KEY=<anon-key>
 # NEXT_PUBLIC_SITE_URL=https://your-production-domain.com
+# ADMIN_LOGIN_COMMAND=<secret-single-token-command>
