--- a/.github/workflows/prod-release.yml
+++ b/.github/workflows/prod-release.yml
@@ -21,6 +21,7 @@ jobs:
       NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
       NEXT_PUBLIC_SITE_URL: ${{ secrets.NEXT_PUBLIC_SITE_URL }}
+      ADMIN_LOGIN_COMMAND: ${{ secrets.ADMIN_LOGIN_COMMAND }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,7 +41,7 @@ jobs:
       - name: Validate preflight build env
         run: |
           missing=0
-          for key in NEXT_PUBLIC_SUPABASE_URL NEXT_PUBLIC_SUPABASE_ANON_KEY NEXT_PUBLIC_SITE_URL; do
+          for key in NEXT_PUBLIC_SUPABASE_URL NEXT_PUBLIC_SUPABASE_ANON_KEY NEXT_PUBLIC_SITE_URL ADMIN_LOGIN_COMMAND; do
             if [ -z "${!key:-}" ]; then
               echo "::error::Missing required repository secret: $key."
               missing=1
